AgapeFR skin: menu fix

--- a/Portals/_default/Skins/AgapeFR/css/bars.css
+++ b/Portals/_default/Skins/AgapeFR/css/bars.css
@@ -19,7 +19,7 @@
 }
 
 #bar2 {
-    height: 34px;
+    min-height: 34px;
     background: #3A8BC2;
 }
 
